added AdvJavaUnitTests/JunitTest02-04, Assig../reflections & swingJdbc/read.txt, HibernateProject & 01, MavenProject & 01, JavaFrameworks/hibernate01 & maven01.    modified Assignments/swingJdbc/...